--- a/packages/plugin-yaml/package.json
+++ b/packages/plugin-yaml/package.json
@@ -18,5 +18,14 @@
   },
   "dependencies": {
     "yaml-register": "^0.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/natemoo-re/proload.git",
+    "directory": "packages/plugin-yaml"
+  },
+  "homepage": "https://github.com/natemoo-re/proload#readme",
+  "bugs": {
+    "url": "https://github.com/natemoo-re/proload/issues"
   }
 }
