--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,5 +23,14 @@
   "dependencies": {
     "deepmerge": "^4.2.2",
     "escalade": "^3.1.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/natemoo-re/proload.git",
+    "directory": "packages/core"
+  },
+  "homepage": "https://github.com/natemoo-re/proload#readme",
+  "bugs": {
+    "url": "https://github.com/natemoo-re/proload/issues"
   }
 }
