--- a/packages/plugin-typescript/package.json
+++ b/packages/plugin-typescript/package.json
@@ -19,5 +19,14 @@
   "dependencies": {
     "@swc-node/register": "^1.0.4",
     "typescript": "^4.1.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/natemoo-re/proload.git",
+    "directory": "packages/plugin-typescript"
+  },
+  "homepage": "https://github.com/natemoo-re/proload#readme",
+  "bugs": {
+    "url": "https://github.com/natemoo-re/proload/issues"
   }
 }
