--- a/packages/plugin-typescript/package.json
+++ b/packages/plugin-typescript/package.json
@@ -13,6 +13,11 @@
     "./package.json": "./package.json"
   },
   "license": "MIT",
+  "keywords": [
+    "proload-plugin",
+    "typescript"
+  ],
+  "author": "Nate Moore <nate@natemoo.re>",
   "peerDependencies": {
     "@proload/core": "^0.1.0"
   },
