--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@proload/core",
   "version": "0.1.0",
-  "description": "",
+  "description": "Searches for and loads your tool's JavaScript configuration files with full support for CJS, ESM, TypeScript and more.",
   "main": "./lib/cjs/index.cjs",
   "module": "./lib/esm/index.mjs",
   "types": "./lib/index.d.ts",
