--- a/packages/plugin-rc/package.json
+++ b/packages/plugin-rc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@proload/plugin-rc",
   "version": "0.1.0",
-  "description": "",
+  "description": "A proload plugin to support '[namespace]rc' files",
   "main": "./lib/index.cjs",
   "module": "./lib/index.mjs",
   "types": "./lib/index.d.ts",
