--- a/packages/plugin-yaml/package.json
+++ b/packages/plugin-yaml/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@proload/plugin-yaml",
   "version": "0.1.0",
-  "description": "",
+  "description": "A proload plugin to support YAML files",
   "main": "./lib/index.cjs",
   "module": "./lib/index.mjs",
   "types": "./lib/index.d.ts",
