--- a/packages/yaml-register/package.json
+++ b/packages/yaml-register/package.json
@@ -1,6 +1,7 @@
 {
   "name": "yaml-register",
   "version": "0.1.0",
+  "description": "A require hook to load YAML files",
   "main": "./lib/index.cjs",
   "module": "./lib/index.mjs",
   "types": "./lib/index.d.ts",
