--- a/packages/jsonc-register/package.json
+++ b/packages/jsonc-register/package.json
@@ -22,7 +22,8 @@
   ],
   "author": "Nate Moore <nate@natemoo.re>",
   "dependencies": {
-    "pirates": "^4.0.1"
+    "pirates": "^4.0.1",
+    "strip-json-comments": "3.1.1"
   },
   "repository": {
     "type": "git",
