--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,8 @@
   "author": "Nate Moore <nate@natemoo.re>",
   "dependencies": {
     "deepmerge": "^4.2.2",
-    "escalade": "^3.1.1"
+    "escalade": "^3.1.1",
+    "resolve-pkg": "^2.0.0"
   },
   "repository": {
     "type": "git",
