--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,8 +31,7 @@
   "author": "Nate Moore <nate@natemoo.re>",
   "dependencies": {
     "deepmerge": "^4.2.2",
-    "escalade": "^3.1.1",
-    "resolve-pkg": "^2.0.0"
+    "escalade": "^3.1.1"
   },
   "repository": {
     "type": "git",
