--- a/packages/plugin-dotfile/package.json
+++ b/packages/plugin-dotfile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proload/plugin-dotfile",
-  "version": "0.2.0",
+  "version": "0.2.1-next.0",
   "description": "A proload plugin to support files with a leading dot",
   "main": "./lib/index.cjs",
   "module": "./lib/index.mjs",
@@ -19,7 +19,7 @@
   ],
   "author": "Nate Moore <nate@natemoo.re>",
   "peerDependencies": {
-    "@proload/core": "^0.3.0"
+    "@proload/core": "^0.3.2-next.3"
   },
   "repository": {
     "type": "git",
