--- a/packages/yaml-register/package.json
+++ b/packages/yaml-register/package.json
@@ -2,13 +2,13 @@
   "name": "yaml-register",
   "version": "0.1.0",
   "description": "A require hook to load YAML files",
-  "main": "./lib/index.cjs",
-  "module": "./lib/index.mjs",
-  "types": "./lib/index.d.ts",
+  "main": "register.js",
   "exports": {
-    ".": {
+    ".": "./register.js",
+    "./lib": {
       "import": "./lib/index.mjs",
-      "require": "./lib/index.cjs"
+      "require": "./lib/index.cjs",
+      "types": "./lib/index.d.ts"
     },
     "./package.json": "./package.json"
   },
